# loglight

./: .gitignore  FIELD_MASKING_REFERENCE.md  LICENSE  MASKING_IMPLEMENTATION.md  README.md  pyproject.toml  test_configure.py
.github/workflows/: publish.yml  tests.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  EXAMPLES.md  HANDLERS.md  INDEX.md  INSTALLATION.md  MASKING.md  MIDDLEWARE.md  QUICKSTART.md  README.md  ROADMAP.md  ROUTING.md  ROUTING_QUICK_REFERENCE.md
examples/: masking_demo.py  routing_demo.py
loglight/: __init__.py  config.py  decorators.py  logger.py  masking.py  routing.py
loglight/handlers/: AsyncQueueHandler.py  BaseHandler.py  ConsoleHandler.py  ElasticsearchHandler.py  FileHandler.py  HTTPHandler.py  KafkaHandler.py  RotatingFileHandler.py  S3Handler.py  SlackHandler.py  SyslogHandler.py  WebhookHandler.py  __init__.py
loglight/middleware/: __init__.py  django.py  fastapi.py  flask.py
tests/: test_config.py  test_decorators.py  test_integration.py  test_logger.py  test_masking.py  test_router_integration.py  test_routing.py  test_routing_scenarios.py
tests/handlers/: test_console_handler.py  test_elasticsearch_handler.py  test_file_handler.py  test_http_handler.py  test_kafka_handler.py  test_slack_handler.py  test_webhook_handler.py
