[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loglight"
version = "0.1.0"
description = "A lightweight structured logging library with traceability for Python apps."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
  { name="Tanveesh Singh Chaudhery", email="tanveeshs@gmail.com" }
]
keywords = ["logging", "json", "traceability", "fastapi", "flask", "structured-logging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Logging",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/loglight"
"Documentation" = "https://github.com/yourusername/loglight#readme"
"Issue Tracker" = "https://github.com/yourusername/loglight/issues"
